--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -14,7 +14,12 @@
             {#{{ encore_entry_script_tags('app') }}#}
         {% endblock %}
     </head>
+
     <body>
+    {% include "shared/_navbar.html.twig" %}
+    <div class="container pt-5">
         {% block body %}{% endblock %}
+    </div>
+
     </body>
 </html>
