--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -8,13 +8,16 @@
 
     <h1>Nos produits phares</h1>
     <div class="row">
-        {% for i in 1..3 %}
+        {% for p in products %}
         <div class="col">
             <div class="card">
-                <img src="https://picsum.photos/300/300" alt="Image du produit" class="img-fluid">
+                <img src="{{ p.mainPicture }}" alt="Image du produit" class="img-fluid">
                 <div class="card-body">
-                    <h4 class="card-title">Superbe chaise en bois</h4>
-                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qui, repudiandae!</p>
+                    <h4 class="card-title">{{ p.name }} ({{ p.price / 100 }} &euro;)</h4>
+                    <span class="badge bg-info">
+                        {{ p.category.name }}
+                    </span>
+                    <p class="card-text">{{ p.shortDescription }}</p>
                     <a href="#" class="btn btn-primary btn-sm">Détails</a>
                     <a href="#" class="btn btn-success btn-sm">Ajouter</a>
                 </div>
