--- a/templates/product/create.html.twig
+++ b/templates/product/create.html.twig
@@ -16,8 +16,9 @@
            {{ form_row(formView.price) }}
        </div>
        <div class="col">
-           {{ form_row(formView.shortDescription) }}
+           {{ form_row(formView.mainPicture) }}
            {{ form_row(formView.category) }}
+           {{ form_row(formView.shortDescription) }}
        </div>
    </div>
 
